# Cross-Compatible-ML-Library

./: .gitignore  README.md  experimentation.java  experimentation.py  flake.nix
Java/lib/: CategoricalCrossentropy.java  DenseLayer.java  Helper.java  Loss.java  Model.java  OptimizerAdam.java  SigmoidActivation.java  SoftmaxActivation.java
Python/: lib.py  pyproject.toml
